working on d3 classed method to toggle class name

--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
@@ -1,5 +1,6 @@
 <div dd-draggabilly class="widget chart-widget">  
-  <svg #chartWidget>
+  <div class="chart-header"></div>
+  <svg #chartWidget class="chart">
     Chart Widget
   </svg>
 </div>
