--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
@@ -2,9 +2,24 @@
 
 .widget.chart-widget{
     @extend .widget;  
-    
-    svg{
-        height: 100%;
+
+    .chart-header{
+        height: 10%;
+        width:100%;
+    }
+
+    .chart{
+        height: 85%;
         width: 100%;
+
+        /deep/ path.arc{
+            &:hover{                
+                fill-opacity: .3;                
+            }
+            &.selected{
+                stroke:white;
+                stroke-width: 3px;
+            }
+        }
     }
 }
