resizing divs, fixing header

--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
@@ -1,5 +1,5 @@
 <div dd-draggabilly class="widget chart-widget">  
-  <div class="chart-header"></div>
+  <div class="chart-header">{{chartHeader}}</div>
   <svg #chartWidget class="chart">
     Chart Widget
   </svg>
