--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
@@ -1,17 +1,16 @@
 @import '../widget.shared';
+@import '../../../../sass/variables.scss';
 
 .widget.chart-widget{
     @extend .widget;  
-
-    .chart-header{
-        height: 10%;
-        width:100%;
-    }
+    
+    height:400px;
+    @include getPackeryFriendlyWidth(2);    
 
     .chart{
         height: 85%;
         width: 100%;
-
+        
         /deep/ path.arc{
             &:hover{                
                 fill-opacity: .3;                
@@ -21,5 +20,10 @@
                 stroke-width: 4px;
             }
         }
+    }
+
+    svg{
+        position: absolute;
+        bottom: 10;
     }
 }
