--- a/DynamicDashboardD3/src/sass/variables.scss
+++ b/DynamicDashboardD3/src/sass/variables.scss
@@ -1,5 +1,10 @@
 /*variables*/
 $blueish-white: #ebffff;
-$max-width: 1280px;
-$lg-width-floor: 975px;
-$sm-width-cieling: 974px; 
+$max-width: 1140px;
+$packer-column-width: 190px;
+$lg-width-floor: 950px;
+$sm-width-cieling: 974px;
+
+@mixin getPackeryFriendlyWidth($multiplier){
+    width:$packer-column-width * $multiplier;
+}
