--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
@@ -1,4 +1,4 @@
-<div dd-draggabilly class="widget chart-widget">  
+<div dd-draggabilly class="widget chart-widget" [style.width.px]="width">  
   <div class="chart-header">{{chartHeader}}</div>
   <svg #chartWidget class="chart">
     Chart Widget
