--- a/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.scss
@@ -1,9 +1,8 @@
 @import '../widget.shared';
-@import '../../../../sass/variables.scss';
 
 .display-widget{
     @extend .widget;
     
-    height:200px;
-     @include getPackeryFriendlyWidth(1); 
+    height:400px;
+    width: 300px;
 }
