--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="dashboard-container row">
   <div class="side-bar col-sm-2">
   </div>
-  <div class="dashboard col-sm-10" dd-packery>
+  <div #dashboard class="dashboard col-sm-10" dd-packery>
     <ng-template ngFor let-widget [ngForOf]="widgets">
       <widget-host></widget-host>
     </ng-template>
