--- a/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
@@ -1,3 +1,3 @@
-<div class="widget display-widget" dd-draggabilly>
+<div class="widget display-widget" dd-draggabilly [style.width.px]="width">
   Display Widget
 </div>
