--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
@@ -1,9 +1,18 @@
 @import '../widget.shared';
+@import '../../../../sass/variables';
 
 .widget.chart-widget{
     @extend .widget;  
     
     height:400px;
+
+    .chart-header{
+        color: $blueish-white;
+        font-size: 18px;
+        height: 30px;
+        padding: 5px 0 0 15px;
+        cursor: default;
+    }
 
     .chart{
         height: 85%;
@@ -14,9 +23,14 @@
                 fill-opacity: .3;                
             }
             &.selected{
-                stroke:white;
+                stroke:$blueish-white;
                 stroke-width: 4px;
             }
+        }
+
+        /deep/ text{
+            cursor: default;
+            fill:$blueish-white;
         }
     }
 
