--- a/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
@@ -1,3 +1,12 @@
 <div class="widget display-widget" dd-draggabilly [style.width.px]="width">
-  Display Widget
+  <div class="display-header">
+    <input class="note-title" type="text" placeholder="Title" [disabled]="!editMode" value="Here are some words"/>    
+  </div>
+  <div class="note-body">
+    <textarea placeholder="Body" [disabled]="!editMode" >Here are some more words</textarea>    
+  </div>
+  <div class="icon-tray">
+    <span *ngIf="!editMode; else checkBox" (click)="toggleEditMode()" class="fa fa-pencil-square-o"></span>     
+    <ng-template #checkBox><span (click)="toggleEditMode()" class="fa fa-check-square-o"></span></ng-template>      
+  </div>
 </div>
