changed color and added example text

--- a/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.scss
@@ -89,7 +89,7 @@ $padding-top-bottom: 10px;
             color: $blueish-white;
 
             &.fa-check-square-o{
-                color: green;
+                color: #68B468;
             }
         }
     }
