--- a/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
@@ -1,9 +1,14 @@
 <div class="widget display-widget" dd-draggabilly [style.width.px]="width">
   <div class="display-header">
-    <input class="note-title" type="text" placeholder="Title" [disabled]="!editMode" value="Here are some words"/>    
+    <input class="note-title" type="text" placeholder="Title" [disabled]="!editMode" value="To Do"/>    
   </div>
   <div class="note-body">
-    <textarea placeholder="Body" [disabled]="!editMode" >Here are some more words</textarea>    
+    <textarea placeholder="Body" [disabled]="!editMode" >
+  - Persist data(values, choices, pos.)
+  - Create line graph
+  - Create data filter menu
+  - Create widget menu on side bar
+    </textarea>    
   </div>
   <div class="icon-tray">
     <span *ngIf="!editMode; else checkBox" (click)="toggleEditMode()" class="fa fa-pencil-square-o"></span>     
