--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <div class="side-bar col-sm-2">
   </div>
   <div #dashboard class="dashboard col-sm-10" dd-packery>
-    <ng-template ngFor let-widget [ngForOf]="widgets">
+    <ng-template ngFor let-widget [ngForOf]="widgetMetadata">
       <widget-host></widget-host>
     </ng-template>
   </div>
