--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.scss
@@ -7,12 +7,12 @@
     }
 
     .side-bar{  
-        border-right: 1px solid $blueish-white;      
-        background-color: #26364A;
+        @include background(1);
+        border-right: 1px solid rgba(0,0,0,.5);      
         min-height: 100%;
     }
 
     .dashboard{
-        padding:0;
+        padding: 10px;
     }
 }
