--- a/DynamicDashboardD3/src/styles.scss
+++ b/DynamicDashboardD3/src/styles.scss
@@ -7,15 +7,15 @@
 
 /*global styles*/
 html body{    
-    background-color: #1C2736;
+    @include background(.9);
     font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
 
 .packery-drop-placeholder {
-  outline: 3px dashed #9C9C9C;
-  outline-offset: -6px;
-  /* transition position changing */
-  -webkit-transition: -webkit-transform 0.2s;
-        transition: transform 0.2s;
+    outline: 3px dashed #9C9C9C;
+    outline-offset: -6px;
+    /* transition position changing */
+    -webkit-transition: -webkit-transform 0.2s;
+    transition: transform 0.2s;
 }
