--- a/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/display-widget/display-widget.component.html
@@ -1,4 +1,4 @@
-<div class="widget display-widget" dd-draggabilly [style.width.px]="width">
+<div class="widget display-widget" dd-draggabilly [style.width.px]="columnWidth">
   <div class="display-header">
     <input class="note-title" type="text" placeholder="Title" [disabled]="!editMode" value="To Do"/>    
   </div>
