odd and ins for healthcare widget, began chat component

--- a/DynamicDashboardD3/src/app/dashboard/widget/healthcare-widget/healthcare-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/healthcare-widget/healthcare-widget.component.scss
@@ -25,21 +25,12 @@
         height: 258px;
         margin: 10px 0;
         height: 86%;
-        width: 50%;
         
-        /deep/ path.arc{
-            &:hover{                
-                fill-opacity: .3;                
-            }
-            &.selected{
-                stroke:$blueish-white;
-                stroke-width: 4px;
-            }
-        }
-
-        /deep/ text{
-            cursor: default;
-            fill:$blueish-white;
-        }
+       &.male{
+           width:45%;
+       }
+       &.female{
+           width:55%;
+       }       
     }    
 }
