--- a/DynamicDashboardD3/src/app/dashboard/widget/healthcare-widget/healthcare-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/healthcare-widget/healthcare-widget.component.html
@@ -1,7 +1,7 @@
 <div dd-draggabilly class="widget healthcare-widget" [style.width.px]="columnWidth">
   <div class="chart-header">{{chartHeader}}</div>
   <div class="graphics-container">
-    <svg #maleGraphic class="graphic"></svg>
-    <svg #femaleGraphic class="graphic"></svg>
+    <svg #maleGraphic class="graphic male"></svg>
+    <svg #femaleGraphic class="graphic female"></svg>
   </div>
 </div>
