--- a/DynamicDashboardD3/src/app/app.component.scss
+++ b/DynamicDashboardD3/src/app/app.component.scss
@@ -1,5 +1,7 @@
 @import '../sass/variables.scss';
 
+$nav-marker-size: 20px;
+
 .app-container{    
     position: relative;
     margin: 0 auto;    
@@ -18,6 +20,7 @@
     display: flex;
     margin:0 auto;    
     height: $header-height; 
+    
     width: $app-width;    
     
     .developer{
@@ -50,7 +53,7 @@
 
         .link{
             margin:0 50px; 
-            font-size:26px;
+            font-size:24px;
 
             &:hover{
                 cursor: pointer;
@@ -66,10 +69,10 @@
                 content: "";
                 height: 0;
                 width: 0;
-                border-top: 20px solid white;
-                border-right: 20px solid transparent;
-                border-bottom: 20px solid transparent;
-                border-left: 20px solid white;
+                border-top: $nav-marker-size solid white;
+                border-right: $nav-marker-size solid transparent;
+                border-bottom: $nav-marker-size solid transparent;
+                border-left: $nav-marker-size solid white;
             }
 
             &::after{                
@@ -78,10 +81,10 @@
                 content: "";
                 height: 0;
                 width: 0;
-                border-top: 20px solid transparent;
-                border-right: 20px solid white;
-                border-bottom: 20px solid white;
-                border-left: 20px solid transparent;
+                border-top: $nav-marker-size solid transparent;
+                border-right: $nav-marker-size solid white;
+                border-bottom: $nav-marker-size solid white;
+                border-left: $nav-marker-size solid transparent;
             }
 
             &.active{
