--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.html
@@ -1,5 +1,7 @@
 <div dd-draggabilly class="widget chart-widget" [style.width.px]="columnWidth">  
-  <div class="chart-header">{{chartHeader}}</div>
+  <div class="chart-header">{{chartHeader}}
+    <span (click)="onDestroyClick()" class="fa fa-trash header-tray"></span>
+  </div>
   <svg #chartWidget class="chart">
     Chart Widget
   </svg>
