--- a/DynamicDashboardD3/src/app/dashboard/widget/healthcare-widget/healthcare-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/healthcare-widget/healthcare-widget.component.scss
@@ -19,6 +19,8 @@
         height: 32px;
         padding-left: 20px;
         cursor: default;
+
+        @extend .widget-header-tray;
     }
 
     .graphic{
