--- a/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chart-widget/chart-widget.component.scss
@@ -13,6 +13,8 @@
         height: 32px;
         padding-left: 20px;
         cursor: default;
+
+        @extend .widget-header-tray;
     }
 
     .chart{
