--- a/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-container row">
   <div class="side-bar col-sm-2">
-    <div class="menu-title">Widgets</div>        
+    <div class="menu-title">Widgets</div>
     <div class="menu-item" *ngFor="let item of menuItems" (click)="onMenuItemClicked(item)">{{item.display}}</div>
     <!-- <div class="menu-item">Indicator</div>
     <div class="menu-item">Messanger</div>
@@ -8,7 +8,7 @@
     <div class="menu-item">Pie Chart</div> -->
   </div>
   <div #dashboard class="dashboard col-sm-10" dd-packery>
-    <ng-template ngFor let-widget [ngForOf]="savedWidgetParams">
+    <ng-template ngFor let-widget [ngForOf]="userWidgets">
       <widget-host></widget-host>
     </ng-template>
   </div>
