--- a/DynamicDashboardD3/src/app/app.component.scss
+++ b/DynamicDashboardD3/src/app/app.component.scss
@@ -31,8 +31,7 @@ $nav-marker-size: 20px;
         flex-direction: column;
         align-items: center;
         justify-content: flex-end;
-        padding-bottom: 10px;
-        border-right: 1px solid rgba(0, 0, 0, 0.5);
+        padding-bottom: 10px;        
         border-bottom: 1px solid rgba(0, 0, 0, 0.5);
         font-family: 'Pacifico', cursive;
         @include background(1);               
@@ -49,6 +48,7 @@ $nav-marker-size: 20px;
         justify-content:flex-end;
         @include background(1);
         border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+        border-left: 1px solid rgba(0, 0, 0, 0.5);
         color: white;
 
         .link{
