--- a/DynamicDashboardD3/src/app/dashboard/widget/chat-widget/chat-widget.component.html
+++ b/DynamicDashboardD3/src/app/dashboard/widget/chat-widget/chat-widget.component.html
@@ -1,6 +1,6 @@
 <div dd-draggabilly class="widget chat-widget" [style.width.px]="columnWidth">
   <div class="chat-header">{{chatHeader}}
-    <span (click)="onDestroyClick()" class="fa fa-trash header-tray"></span>
+    <span (click)="destroy()" class="fa fa-trash header-tray"></span>
   </div>
   <div class="chat-container">
     <div class="friends-window"></div>
